# Aile

./: .clangd  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
.github/workflows/: package-release.yml  package.yml
Release/b2e/: 7z.b2e  cab.b2e  tar.gz.bz2.xz.zst.liz.lz4.lz5.br.b2e  zip.zipx.b2e
aile/: CMakeLists.txt  README.md
aile/Release/b2e/: cab.lzh.rpm.cpio.b2e
aile/docs/: backend-interface-refactor.md  cli-options-comparison.md
aile/kilib/: kl_misc.h  kl_rythp.h
aile/shell/: AileShell.def  AileShellConfig.cpp
aile/src/: AileFlowApp.h  AppServices.h  ArcB2e.cpp  ArchiveController.h  ArchiveOpener.cpp  B2eBackend.cpp  B2eBackend.h  B2eBridge.cpp  CommentDlg.cpp  CompressDlg.cpp  CompressHelper.cpp  CompressHelper.h  FormatRegistry.cpp  FormatRegistry.h  InfoDlg.cpp  MainWindowView.cpp  PropertiesDlg.cpp  Settings.h  SevenZipCache.h  SevenZipStreams.cpp  SevenZipStreams.h  resource.h
aile/src/kilib/: kl_app.h  kl_find.cpp  kl_wcmn.cpp  kl_wcmn.h
aileex/: .gitignore  CMakeLists.txt  README.md
aileex/docs/: architecture.md  backend-interface-refactor.md  build.md  cli-format-method-options.md  cli-options-comparison.md  hardcode-audit.md  known-issues.md  rar-extra-params.md  review-2026-05-05.md  roadmap.md  specification.md
aileex/res/: AileEx.rc
aileex/sdk/7zip/Archive/: IArchive.h
aileex/shell/: AileExShell.def  AileExShellConfig.cpp  AileEx_register32.bat  AileEx_unregister32.bat  register.bat  unregister.bat
aileex/src/: AdvancedCompressDlg.cpp  App.cpp  App.h  AppServices.h  ArchiveController.cpp  ArchiveController.h  ArchiveOpener.cpp  ArchiveOpener.h  CommentDlg.h  CompressDlg.cpp  CompressDlg.h  CompressPolicy.cpp  CompressPolicy.h  FormatRegistry.cpp  IArchiveUI.h  MainWindow.cpp  MainWindow.h  MainWindowInternal.h  MainWindowOps.cpp  MainWindowView.cpp  PropertiesDlg.cpp  RarBackend.cpp  RarBackend.h  RarProcess.cpp  RarProcess.h  Settings.cpp  Settings.h  SettingsDlg.cpp  SettingsDlg.h  SevenZip.cpp  SevenZip.h  SevenZipBackend.cpp  SevenZipBackend.h  SevenZipCallbacks.cpp  SevenZipCallbacks.h  SevenZipInternal.h  SevenZipRead.cpp  SevenZipWrite.cpp  UnrarDll.cpp  main.cpp  (+1 more)
aileflow/: .gitattributes  .gitignore  CMakeLists.txt  README.md
aileflow/.github/workflows/: package.yml
aileflow/Release/b2e/: 0.b2e  7z.b2e  cab.b2e  lzh.b2e  rar.b2e  rpm.cpio.b2e  tar.gz.bz2.xz.zst.liz.lz4.lz5.br.b2e  zip.zipx.b2e  zpaq.b2e
aileflow/docs/: architecture.md  b2e-bugfixes.md  b2e-script-improvements.md  kilib-modernization.md  limitations.md  noah-feature-gaps.md
aileflow/kilib/: kilib.h  kl_app.cpp  kl_app.h  kl_cmd.cpp  kl_cmd.h  kl_file.cpp  kl_file.h  kl_find.h  kl_rythp.cpp  kl_str.cpp  kl_str.h  kl_wcmn.cpp
aileflow/res/: AileFlow.rc  manifest.xml
aileflow/shell/: AileFlowShell.def  AileFlowShellConfig.cpp  AileFlow_register32.bat  AileFlow_unregister32.bat  register.bat  unregister.bat
aileflow/src/: AileFlowApp.h  App.cpp  App.h  AppServices.h  ArcB2e.cpp  ArcB2e.h  ArchiveController.cpp  ArchiveController.h  Archiver.cpp  B2eBridge.cpp  B2eBridge.h  B2eScript.cpp  B2eScript.h  CompressDlg.cpp  CompressDlg.h  CompressPolicy.cpp  CompressPolicy.h  I18n.cpp  IArchiveUI.h  MainWindow.cpp  MainWindow.h  MainWindowInternal.h  MainWindowOps.cpp  MainWindowView.cpp  Settings.h  SettingsDlg.cpp  SettingsDlg.h  SevenZip.h  SevenZipB2e.cpp  SevenZipBackend.cpp  SevenZipBackend.h  main.cpp  resource.h  stdafx.h
aileflow/tests/: harness.cpp
ailesetup/: CMakeLists.txt
ailesetup/res/: AileSetup.rc  resource.h
ailesetup/src/: main.cpp
b2e/: 0.b2e  rar.b2e
build_release_setup/: .ninja_deps  .ninja_log  build.ninja
common/: ArchiveSession.cpp  ArchiveSession.h  DialogUtils.h  I18n.h  IArchiveBackend.h  ProgressDlg.cpp  ProgressDlg.h  WorkerThread.cpp  WorkerThread.h
common/shell/: ArchiveClassify.h  DllMain.cpp  ShellConfig.h  ShellExt.cpp  ShellExt.h  register.bat.in  unregister.bat.in
docs/: architecture.md  b2e-integration-design.md  b2e-script-guide.md  build.md  cleanup-candidates-2026-05-05.md  cli-format-method-options.md  compress-extra-params.md  hardcode-audit.md  known-issues.md  limitations.md  menu-pending.md  noah-feature-gaps.md  roadmap.md  rythp-language-spec.md  specification.md  sync-aileex.md  todo.md
docs/user/: README.txt  b2e.txt  cli.txt  faq.txt  manual.txt  shell-extension.txt
kilib/: kl_wcmn.h
res/: Aile.rc  AileEx.rc  AileFlow.rc  manifest.xml
sdk/7zip/: IDecl.h
src/: AdvancedCompressDlg.cpp  AdvancedCompressDlg.h  AileFlowApp.h  App.cpp  App.h  ArcB2e.cpp  ArcB2e.h  ArchiveController.cpp  ArchiveOpener.cpp  Archiver.cpp  Archiver.h  B2eBackend.cpp  B2eBackend.h  B2eBridge.cpp  B2eBridge.h  CliMode.cpp  CliMode.h  CompressDlg.cpp  CompressDlg.h  CompressHelper.cpp  CompressHelper.h  CompressPolicy.cpp  CompressPolicy.h  DialogUtils.h  FormatRegistry.cpp  FormatRegistry.h  IArchiveUI.h  InfoDlg.cpp  InfoDlg.h  MainWindow.cpp  MainWindow.h  MainWindowInternal.h  MainWindowOps.cpp  MainWindowView.cpp  ProgressDlg.cpp  ProgressDlg.h  PropertiesDlg.h  RarAdvancedDlg.cpp  RarAdvancedDlg.h  RarProcess.cpp  (+20 more)
src/kilib/: kl_carc.h  kl_str.h
